Wed Aug  6 20:56:02 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate src of WIN32OLE_TYPELIB from
	  win32ole.c

	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_typelib.c: ditto.
	* ext/win32ole/win32ole_typelib.h: ditto.
	* ext/win32ole/depend: ditto.

Wed Aug  6 20:44:07 2014  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_one): [DOC] Move enum.one? documentation before the
	  relevant method.  Submitted by @vipulnsward. [Fixes GH-687]
	  https://github.com/ruby/ruby/pull/687

Wed Aug  6 20:25:47 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#replace): Check if an object given is enumerable
	  before clearing self.  Reported by yui-knk. [GH-675]
	  https://github.com/ruby/ruby/pull/675

Wed Aug  6 20:07:26 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (olerecord_ivar_set): remove rb_str_subseq.

Wed Aug  6 19:09:27 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set): Implement Set#clone by splitting
	  initialize_copy into initialize_dup and initialize_clone.
	  Submitted by yui-knk. [Fixes GH-661]
	  https://github.com/ruby/ruby/pull/661

Wed Aug  6 18:42:58 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate src of WIN32OLERuntimeError
	  from win32ole.c.

	* ext/win32ole/win32ole.h: ditto
	* ext/win32ole/depend: ditto.
	* ext/win32ole/win32ole_error.c: ditto.
	* ext/win32ole/win32ole_error.h: ditto.

Wed Aug  6 04:33:58 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.proxy_uri): use initializer instead
	  of parser to handle IPv6 address. [Bug #9129]

Wed Aug  6 04:16:05 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/requests.rb (Net::HTTP::Options::RESPONSE_HAS_BODY):
	  OPTIONS requests may have response bodies. [Feature #8429]
	  http://tools.ietf.org/html/rfc7231#section-4.3.7

Wed Aug  6 03:18:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>
